# serde-cpp-example-package

./: CMakeLists.txt
src/: main.cpp
